[MODORDERS-1214]. Replace mod-configuration usage to use Settings API from orders-storage