@@ -79,7 +79,7 @@ public class PiecesClaimingServiceTest {
 
     var throwable = Assertions.assertThrows(HttpException.class, () -> piecesClaimingService.sendClaims(claimingCollection, requestContext));
     Assertions.assertInstanceOf(HttpException.class, throwable);
-    var error = throwable.getErrors().getErrors().get(0);
+    var error = throwable.getErrors().getErrors().getFirst();
     assertEquals(CANNOT_SEND_CLAIMS_PIECE_IDS_ARE_EMPTY.getCode(), error.getCode());
     assertEquals(CANNOT_SEND_CLAIMS_PIECE_IDS_ARE_EMPTY.getDescription(), error.getMessage());
     Assertions.assertTrue(error.getParameters().isEmpty());
@@ -98,11 +98,11 @@ public class PiecesClaimingServiceTest {
       .onComplete(testContext.failing(throwable -> testContext.verify(() -> {
         Assertions.assertInstanceOf(HttpException.class, throwable);
         var httpException = (HttpException) throwable;
-        var error = httpException.getErrors().getErrors().get(0);
+        var error = httpException.getErrors().getErrors().getFirst();
         assertEquals(CANNOT_RETRIEVE_CONFIG_ENTRIES.getCode(), error.getCode());
         assertEquals(CANNOT_RETRIEVE_CONFIG_ENTRIES.getDescription(), error.getMessage());
         Assertions.assertEquals(1, error.getParameters().size());
-        var parameter = error.getParameters().get(0);
+        var parameter = error.getParameters().getFirst();
         Assertions.assertEquals("pieceId", parameter.getKey());
         Assertions.assertEquals(pieceId1, parameter.getValue());
         testContext.completeNow();
@@ -122,11 +122,11 @@ public class PiecesClaimingServiceTest {
       .onComplete(testContext.failing(throwable -> testContext.verify(() -> {
         Assertions.assertInstanceOf(HttpException.class, throwable);
         var httpException = (HttpException) throwable;
-        var error = httpException.getErrors().getErrors().get(0);
+        var error = httpException.getErrors().getErrors().getFirst();
         assertEquals(CANNOT_FIND_PIECES_WITH_LATE_STATUS_TO_PROCESS.getCode(), error.getCode());
         assertEquals(CANNOT_FIND_PIECES_WITH_LATE_STATUS_TO_PROCESS.getDescription(), error.getMessage());
         Assertions.assertEquals(1, error.getParameters().size());
-        var parameter = error.getParameters().get(0);
+        var parameter = error.getParameters().getFirst();
         Assertions.assertEquals("pieceId", parameter.getKey());
         Assertions.assertEquals(pieceId1, parameter.getValue());
         testContext.completeNow();
@@ -151,11 +151,11 @@ public class PiecesClaimingServiceTest {
      .onComplete(testContext.failing(throwable -> testContext.verify(() -> {
         Assertions.assertInstanceOf(HttpException.class, throwable);
         var httpException = (HttpException) throwable;
-        var error = httpException.getErrors().getErrors().get(0);
+        var error = httpException.getErrors().getErrors().getFirst();
         assertEquals(CANNOT_FIND_PIECES_WITH_LATE_STATUS_TO_PROCESS.getCode(), error.getCode());
         assertEquals(CANNOT_FIND_PIECES_WITH_LATE_STATUS_TO_PROCESS.getDescription(), error.getMessage());
         Assertions.assertEquals(1, error.getParameters().size());
-        var parameter = error.getParameters().get(0);
+        var parameter = error.getParameters().getFirst();
         Assertions.assertEquals("pieceId", parameter.getKey());
         Assertions.assertEquals("pieceId1", parameter.getValue());
         testContext.completeNow();
@@ -180,11 +180,11 @@ public class PiecesClaimingServiceTest {
       .onComplete(testContext.failing(throwable -> testContext.verify(() -> {
         Assertions.assertInstanceOf(HttpException.class, throwable);
         var httpException = (HttpException) throwable;
-        var error = httpException.getErrors().getErrors().get(0);
+        var error = httpException.getErrors().getErrors().getFirst();
         assertEquals(UNABLE_TO_GENERATE_CLAIMS_FOR_ORG_NO_INTEGRATION_DETAILS.getCode(), error.getCode());
         assertEquals(String.format(UNABLE_TO_GENERATE_CLAIMS_FOR_ORG_NO_INTEGRATION_DETAILS.getDescription(), "VENDOR2"), error.getMessage());
         Assertions.assertEquals(2, error.getParameters().size());
-        var parameter1 = error.getParameters().get(0);
+        var parameter1 = error.getParameters().getFirst();
         Assertions.assertEquals("pieceId", parameter1.getKey());
         Assertions.assertEquals(pieceId, parameter1.getValue());
         var parameter2 = error.getParameters().get(1);
@@ -225,11 +225,11 @@ public class PiecesClaimingServiceTest {
       .onComplete(testContext.failing(throwable -> testContext.verify(() -> {
         Assertions.assertInstanceOf(HttpException.class, throwable);
         var httpException = (HttpException) throwable;
-        var error = httpException.getErrors().getErrors().get(0);
+        var error = httpException.getErrors().getErrors().getFirst();
         assertEquals(UNABLE_TO_GENERATE_CLAIMS_FOR_ORG_NO_INTEGRATION_DETAILS.getCode(), error.getCode());
         assertEquals(String.format(UNABLE_TO_GENERATE_CLAIMS_FOR_ORG_NO_INTEGRATION_DETAILS.getDescription(), "VENDOR2"), error.getMessage());
         Assertions.assertEquals(4, error.getParameters().size());
-        var parameter1 = error.getParameters().get(0);
+        var parameter1 = error.getParameters().getFirst();
         Assertions.assertEquals("pieceId", parameter1.getKey());
         Assertions.assertEquals(pieceId1, parameter1.getValue());
         var parameter2 = error.getParameters().get(1);
@@ -262,8 +262,8 @@ public class PiecesClaimingServiceTest {
     piecesClaimingService.sendClaims(claimingCollection, requestContext)
       .onComplete(testContext.succeeding(result -> testContext.verify(() -> {
         assertEquals(1, result.getClaimingPieceResults().size());
-        assertEquals("pieceId1", result.getClaimingPieceResults().get(0).getPieceId());
-        assertEquals(ClaimingPieceResult.Status.SUCCESS, result.getClaimingPieceResults().get(0).getStatus());
+        assertEquals("pieceId1", result.getClaimingPieceResults().getFirst().getPieceId());
+        assertEquals(ClaimingPieceResult.Status.SUCCESS, result.getClaimingPieceResults().getFirst().getStatus());
         testContext.completeNow();
       })));
   }
@@ -288,8 +288,8 @@ public class PiecesClaimingServiceTest {
     piecesClaimingService.sendClaims(claimingCollection, requestContext)
       .onComplete(testContext.succeeding(result -> testContext.verify(() -> {
         assertEquals(2, result.getClaimingPieceResults().size());
-        assertEquals("pieceId1", result.getClaimingPieceResults().get(0).getPieceId());
-        assertEquals(ClaimingPieceResult.Status.SUCCESS, result.getClaimingPieceResults().get(0).getStatus());
+        assertEquals("pieceId1", result.getClaimingPieceResults().getFirst().getPieceId());
+        assertEquals(ClaimingPieceResult.Status.SUCCESS, result.getClaimingPieceResults().getFirst().getStatus());
         assertEquals("pieceId2", result.getClaimingPieceResults().get(1).getPieceId());
         assertEquals(ClaimingPieceResult.Status.SUCCESS, result.getClaimingPieceResults().get(1).getStatus());
         testContext.completeNow();
@@ -337,8 +337,8 @@ public class PiecesClaimingServiceTest {
         assertEquals(5, result.getClaimingPieceResults().size());
         var copiedSortedResults = new ArrayList<>(result.getClaimingPieceResults());
         copiedSortedResults.sort(Comparator.comparing(ClaimingPieceResult::getPieceId));
-        assertEquals("pieceId1", copiedSortedResults.get(0).getPieceId());
-        assertEquals(ClaimingPieceResult.Status.SUCCESS, copiedSortedResults.get(0).getStatus());
+        assertEquals("pieceId1", copiedSortedResults.getFirst().getPieceId());
+        assertEquals(ClaimingPieceResult.Status.SUCCESS, copiedSortedResults.getFirst().getStatus());
         assertEquals("pieceId2", copiedSortedResults.get(1).getPieceId());
         assertEquals(ClaimingPieceResult.Status.SUCCESS, copiedSortedResults.get(1).getStatus());
         assertEquals("pieceId3", copiedSortedResults.get(2).getPieceId());
@@ -393,8 +393,8 @@ public class PiecesClaimingServiceTest {
         assertEquals(5, result.getClaimingPieceResults().size());
         var copiedSortedResults = new ArrayList<>(result.getClaimingPieceResults());
         copiedSortedResults.sort(Comparator.comparing(ClaimingPieceResult::getPieceId));
-        assertEquals("pieceId1", copiedSortedResults.get(0).getPieceId());
-        assertEquals(ClaimingPieceResult.Status.SUCCESS, copiedSortedResults.get(0).getStatus());
+        assertEquals("pieceId1", copiedSortedResults.getFirst().getPieceId());
+        assertEquals(ClaimingPieceResult.Status.SUCCESS, copiedSortedResults.getFirst().getStatus());
         assertEquals("pieceId2", copiedSortedResults.get(1).getPieceId());
         assertEquals(ClaimingPieceResult.Status.SUCCESS, copiedSortedResults.get(1).getStatus());
         assertEquals("pieceId3", copiedSortedResults.get(2).getPieceId());
